# argon2-cli

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
src/: main.rs
tests/: verify.rs
wix/: main.wxs
